--- a/.classpath
+++ b/.classpath
@@ -2,19 +2,47 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/data1/maven-repository/org/jboss/netty/netty/3.1.5.GA/netty-3.1.5.GA.jar"/>
-	<classpathentry kind="lib" path="D:/data1/maven-repository/org/codehaus/jackson/jackson-core-lgpl/1.3.5/jackson-core-lgpl-1.3.5.jar"/>
-	<classpathentry kind="lib" path="D:/data1/maven-repository/org/codehaus/jackson/jackson-mapper-lgpl/1.3.5/jackson-mapper-lgpl-1.3.5.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-fileupload-1.2.1.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-jexl-1.1.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/commons-validator-1.3.1.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/dom4j-2.0.0-ALPHA-2.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/zookeeper-3.3.3.jar"/>
-	<classpathentry kind="lib" path="E:/LaxserZJavaPool/lib/protobuf-java-2.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/activation-1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/com.laxser.blitz.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-fileupload-1.2.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-jexl-1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/dom4j-2.0.0-ALPHA-2.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/json_simple-1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jsonrpc-1.0.0.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jstl-1.1.2.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/mysql-connector-java-5.1.10.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/paoding-rose-1.0-20110622.032053-34.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/paoding-rose-jade-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/paoding-rose-portal-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/paoding-rose-scanning-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/protobuf-java-2.3.0.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-beans-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-context-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-context-support-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-core-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-web-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/spring-webmvc-2.5.6.SEC01.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/velocity-1.6.2.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/velocity-tools-1.3.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/zookeeper-3.3.3.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/netty-3.6.2.Final.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jackson-annotations-2.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jackson-core-2.1.1.jar"/>
+	<classpathentry kind="lib" path="E:/system/lib/jackson-databind-2.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
